--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "bootstrap": "^5.1.3",
+    "cra-template-typescript": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
