--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.25",
     "@types/react": "^18.0.6",
+    "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^18.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.1.3",
     "cra-template-typescript": "^1.2.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.3.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "sass": "^1.52.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
