--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -12,14 +13,18 @@
     "@types/react-bootstrap": "^0.32.29",
     "@types/react-dom": "^18.0.2",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "cra-template-typescript": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.52.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
